--- a/styles5.css
+++ b/styles5.css
@@ -10,3 +10,18 @@
     display: table;
     clear: both;
 }
+
+form {
+    margin-left : 15px;
+}
+
+input{
+    margin-top: 10px;
+}
+textarea{
+    margin-top: 10px;
+}
+input[type="submit"]{
+    padding-left: 5px;
+    padding-right: 5px;
+}
