--- a/project3/styles.css
+++ b/project3/styles.css
@@ -11,11 +11,40 @@
     clear: both;
 }
 
+/**** reusable ****/
+.row{
+    width: 1140px;
+    margin: 0px auto;
+}
+
  /**** header ****/
 header{
     background: linear-gradient(90deg,rgba(29, 168, 1, 0.5),rgba(168, 153, 153, 0.5),rgba(151, 31, 31, 0.5)),url("assets/pizza.jpg");
     background-size: cover;
     height: 100vh;
+}
+#logo img{
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    top: 2%;
+    left: 45%;
+}
+nav ul{
+    float: right;
+    margin-top: 40px;
+}
+nav ul li {
+    display: inline-block;
+    color: #fff;
+    margin-left:10px;
+    margin-right: 10px; 
+}
+nav ul li a{
+    color: #fff;
+    font-size: 30px;
+    text-decoration: none;
+      
 }
 .header-text{
     position: absolute;
@@ -61,3 +90,4 @@ header{
     background: red;
     border: 1px solid red
 }
+
