--- a/project3/styles.css
+++ b/project3/styles.css
@@ -70,6 +70,7 @@ nav ul li a:active{
     text-transform: uppercase;
     letter-spacing: 2px;
     word-spacing: 3px;
+    margin-left: 10px;
 }
 .btn{
     display: inline-block;
@@ -85,6 +86,7 @@ nav ul li a:active{
 .btn-full:link,
 .btn-full:visited {
     background: rgb(51, 197, 6);
+    margin-left: 10px;
 }
 .btn-full:hover,
 .btn-full:active{
@@ -112,7 +114,7 @@ main{
     text-align: center;
     margin-top: 20px;
     font-size: 30px;
-    
+    margin-bottom: 20px;
 }
 .heading-main h2:after {
     content:"";
@@ -171,7 +173,9 @@ main{
     font-size: 20px;
 }
 .one-reference p{
-    font-style: italic;
+    font-style: italic;    
+    margin-left: 20px;
+    margin-right: 20px;
 }
 .photo-name {
     margin-top: 20px ;
@@ -189,11 +193,13 @@ main{
     float: left;
 }
 /**** photo gallery *****/
+
 .photo-segment li {
     list-style-type: none;
     background-color: #000;
     overflow: hidden;
     height: 300px;
+    
     
 }
 .photo-segment img{
@@ -201,6 +207,8 @@ main{
     height: 300px;
     opacity: 0.5;
     transform: scale(1.15);
+    
+    
 }
 .photo-segment img:hover{
     transition: transform 0.5s, opacity 0.5s;
@@ -211,6 +219,7 @@ main{
 .formular{
     background:linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(assets/pizza4.jpg);
     background-attachment: fixed;
+    
 }
 .formular h2{
     color:white;
@@ -219,7 +228,7 @@ main{
     font-size: 40px;
 }
 .contact-form{
-    width: 100%;
+    max-width: 100%;
     text-align: center;
     
     
@@ -234,6 +243,8 @@ main{
     font-family: Arial;
     font-size: 20px;
     margin-bottom: 15px;
+    width: 50%;
+    text-align: center;
     
 }
 .contact-form textarea{
@@ -246,6 +257,8 @@ main{
     font-family: Arial;
     font-size: 20px;
     margin-bottom: 15px;
+    width: 50%;
+    text-align: center;
 }
 .contact-form input[type="submit"]{
     background-color: rgb(184, 156, 30);
@@ -262,23 +275,24 @@ main{
 /**** Footer ******/
 .footer-page{
     background:linear-gradient(90deg,rgba(29, 168, 1, 0.5),rgba(168, 153, 153, 0.5),rgba(151, 31, 31, 0.5));
-    
     color: #fff;
+    max-width: 100%;
+}
+.footer-page  .row{
+    max-width: 100%;
 }
 .social{
     text-align: center;
     margin: 10px 0;
+    
 }
 .social p{
     display: inline;
     margin-right: 20px;
-    margin-left: 20px;
+    
+
 }
-.social p a{
-    text-decoration: none;
-    color: white;
-    font-size: 25px;
-}
+
 .social p a:link,
 .social p a:visited{
     text-decoration: none;
